--- a/app/src/main/resources/static/register/assets/css/style.css
+++ b/app/src/main/resources/static/register/assets/css/style.css
@@ -1,15 +1,14 @@
-/**
-* Template Name: NiceAdmin
-* Updated: Mar 09 2023 with Bootstrap v5.2.3
-* Template URL: https://bootstrapmade.com/nice-admin-bootstrap-admin-html-template/
-* Author: BootstrapMade.com
-* License: https://bootstrapmade.com/license/
-*/
 
-/*--------------------------------------------------------------
-# General
---------------------------------------------------------------*/
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;700&display=swap');
+@font-face {
+    font-family: 'SUIT-Regular';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_suit@1.0/SUIT-Regular.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
+}
+
+* {
+  font-family: 'SUIT-Regular' !important;
+}
 
 :root {
   scroll-behavior: smooth;
@@ -20,9 +19,15 @@
 }
 
 body {
-  font-family: 'Noto Sans KR', sans-serif;
   background: #f6f9ff;
   color: #444444;
+  padding-bottom : 50px;
+}
+
+  .pagination {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
 }
 
 .cursor {
@@ -38,6 +43,7 @@ body {
   left: 50%;
   width: 700px;
 }
+
 
 #preview-container {
   width: 120px;
@@ -793,7 +799,7 @@ h6 {
 }
 
 .sidebar-nav .nav-heading {
-  font-size: 11px;
+  font-size: 12px;
   text-transform: uppercase;
   color: #899bbd;
   font-weight: 600;
@@ -1344,7 +1350,14 @@ h6 {
 .footer-img-container {
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: center; 
+}
+
+.tooltip-container {
+	display: flex;
+  margin-top: 20px;
+  justify-content: center; 
+  
 }
 
 .footer {
@@ -1352,8 +1365,8 @@ h6 {
   bottom: 0;
   width: 100%;
 	background: #ffffff;
-  padding: 20px auto;
   transition: all 0.3s;
   border-top: 1px solid #cddfff;
+  margin-top:50px;
 }
 
