--- a/app/src/main/resources/static/register/style.css
+++ b/app/src/main/resources/static/register/style.css
@@ -100,7 +100,7 @@ body::-webkit-scrollbar {
 
 
 .btn-gr {
-  width: 23%;
+  width: 15%;
   height: 75px;
   margin-left: auto;
   margin-right: auto;
@@ -120,7 +120,7 @@ body::-webkit-scrollbar {
   opacity: 1;
 }
 .btn-1 {
-  width: 45%;
+  width: 70%;
   transition: 0.2s;
 }
 .btn-2 {
@@ -130,7 +130,7 @@ body::-webkit-scrollbar {
 }
 .btn-3 {
   margin-left: 1%;
-  width: 18%;
+  width: 29%;
   font-size: 80%;
   transition: 0.2s;
 }
@@ -164,10 +164,10 @@ body::-webkit-scrollbar {
 #root {
   position: relative;
   margin-top: 50px;
-  width: 1200px;
+  width: 750px;
   height: 750px;
-  padding-left: 40px;
-  padding-top: 40px;
+  padding-left: 1%;
+  padding-top: 2%;
   margin-left: auto;
   margin-right: auto;
   background-color: white;
@@ -230,7 +230,8 @@ body::-webkit-scrollbar {
 
 .insert-left{
   display: inline-block;
-  width: 1100px;
+  width: 98%;
+  box-sizing: border-box;
 }
 .insert-btns{
   float: right;
