--- a/app/src/main/resources/static/register/style.css
+++ b/app/src/main/resources/static/register/style.css
@@ -177,11 +177,27 @@ body::-webkit-scrollbar {
 
 #root {
   position: relative;
-  margin-top: 50px;
+  margin-top: 40px;
   width: 750px;
-  height: 750px;
+  height: 770px;
   padding-left: 1%;
-  padding-top: 2%;
+  padding-top: 1%;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: white;
+  box-shadow: 0px 0px 6px 2px rgb(105, 105, 105);
+  border-radius: 10px;
+  box-sizing: border-box;
+  transition: 1s;
+}
+
+#root-login {
+  position: relative;
+  margin-top: 40px;
+  width: 750px;
+  height: 400px;
+  padding-left: 1%;
+  padding-top: 1%;
   margin-left: auto;
   margin-right: auto;
   background-color: white;
